syntax = "proto3";
package authzed.api.v0;

option go_package = "github.com/authzed/authzed-go/proto/authzed/api/v0";
option java_package = "com.authzed.api.v0";

import "validate/validate.proto";

import "authzed/api/v0/core.proto";
import "authzed/api/v0/namespace.proto";

service NamespaceService {
  rpc ReadConfig(ReadConfigRequest) returns (ReadConfigResponse) {}
  rpc WriteConfig(WriteConfigRequest) returns (WriteConfigResponse) {}
}

message ReadConfigRequest {
  string namespace = 1 [ (validate.rules).string = {
    pattern : "^([a-z][a-z0-9_]{2,62}[a-z0-9]/)?[a-z][a-z0-9_]{2,62}[a-z0-9]$",
    max_bytes : 128,
  } ];
  Zookie at_revision = 2;
}

message ReadConfigResponse {
  string namespace = 1;
  NamespaceDefinition config = 2;
  Zookie revision = 4;
}

message WriteConfigRequest {
  repeated NamespaceDefinition configs = 2 [
    (validate.rules).repeated .min_items = 1,
    (validate.rules).repeated .items.message.required = true
  ];
}

message WriteConfigResponse { Zookie revision = 1; }
